// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`able to get payment history 1`] = `
Object {
  "data": Object {
    "PaymentHistory": Array [
      Object {
        "amountDue": 20,
        "amountPaid": 20,
        "date": "2018-09-07T14:00:00.000Z",
        "invoicePdf": "https://stripe.com/invoice",
        "periodEnd": "2018-10-07T13:00:00.000Z",
        "periodStart": "2018-09-07T14:00:00.000Z",
        "status": "paid",
      },
    ],
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`able to get user profile 1`] = `
Object {
  "data": Object {
    "Me": Object {
      "createdAt": "1988-03-01T13:00:00.000Z",
      "email": "test+user@email.com",
      "firstName": "Test",
      "fullName": "Test User",
      "id": "1",
      "lastName": "User",
      "periodEnd": "1988-11-10T13:00:00.000Z",
      "periodStart": "1988-11-09T13:00:00.000Z",
      "team": Object {
        "id": "1",
        "name": "A team name",
      },
      "updatedAt": "1988-03-02T13:00:00.000Z",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`able to invite other users to join a team 1`] = `
Object {
  "data": Object {
    "InviteUser": Object {
      "email": "jacky@chan.com",
      "firstName": "Jacky",
      "lastName": "Chan",
      "status": "Pending",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`able to login successfully 1`] = `
Object {
  "data": Object {
    "Login": Object {
      "jwt": "JWT_TOKEN_STRING",
      "user": Object {
        "email": "test+user@email.com",
        "firstName": "Test",
        "id": "1",
        "lastName": "User",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`able to signup successfully 1`] = `
Object {
  "data": Object {
    "Signup": Object {
      "jwt": "JWT_TOKEN_STRING",
      "user": Object {
        "email": "new.user@test.com",
        "firstName": "Test",
        "id": "1",
        "lastName": "User",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`able to signup successfully via an invite 1`] = `
Object {
  "data": Object {
    "Signup": Object {
      "jwt": "JWT_TOKEN_STRING",
      "user": Object {
        "email": "new.user@test.com",
        "firstName": "Test",
        "id": "1",
        "lastName": "User",
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`able to update user password successfully 1`] = `
Object {
  "data": Object {
    "UpdateUser": Object {
      "email": "test+user@email.com",
      "firstName": "Test",
      "id": "1",
      "lastName": "User",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`able to update user profile successfully 1`] = `
Object {
  "data": Object {
    "UpdateUser": Object {
      "email": "test+user@email.com",
      "firstName": "Test",
      "id": "1",
      "lastName": "User",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`not able to reset password with wrong token 1`] = `
Object {
  "data": Object {
    "ResetPassword": null,
  },
  "errors": Array [
    [GraphQLError: Password reset token is invalid.],
  ],
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
